2017-11-09  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Refactor dictionary out of AbsWordSeg.

	* src/abswordseg.h, src/abswordseg.cpp,
	  src/Makefile.am, +src/dict.h, +src/dict.cpp, -src/dictpath.h:
	  - New class Dict to wrap up Trie, with Dict::State to wrap up
	    TrieState.
	  - Move AbsWordSeg::InitDict() functionality into Dict::open().
	  - Remove AbsWordSeg::MyDict member.
	* src/abswordseg.h, src/abswordseg.cpp:
	  - Add dict arg to AbsWordSeg::WordSeg() and
	    AbsWordSeg::CreateWordList(), and use it instead of
	    the old MyDict.
	  - Replace TrieState type with Dict::State.

	* src/wordseg.cpp:
	  - [InitWordSegmentation(), +OpenDict()] Split dictionary opening
	    into a separate function, and simplify the rest code.
	  - [main()] Define Dict local instance and call OpenDict() upon it.
	    Drop dictpath parameter from InitWordSegmentation() call.
	  - [WordSegmentation()] Add dict arg and pass it on to
	    AbsWordSeg::WordSeg().
	  - [main()] Add dict parameter to WordSegmentation() calls,
	    as now required.

2017-11-07  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace type for Unicode char with 'wchar_t' where it isn't.

	* src/worddef.h (isThaiUni, tis2uni, uni2tis):
	  - Replace 'unsigned int' type for Unicode char with 'wchar_t'.

2017-11-07  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update test check file according to new dict.

	* tests/long-wseg.txt:
	  - 'เท่าไหร่' is now a single word, not 'เท่า|ไหร่'.

2017-11-07  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Rename AbsWordSeg::Has_Karun() to HasKaran().

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Rename AbsWordSeg::Has_Karun() to HasKaran().

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace mysterious 'mode' var with 'verbose'.

	* src/wordseg.cpp (main):
	  - Replace "char mode" variable with "bool verbose".
	  - Replace all assignments & checks of the var based on bool.
